Batch insert changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.jdbc.batch_size=20000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.generate_statistics=true
